--- a/bench/src/main/resources/org/vanilladb/core/vanilladb.properties
+++ b/bench/src/main/resources/org/vanilladb/core/vanilladb.properties
@@ -28,7 +28,7 @@
 #
 
 # The number of bytes in a block.  A common value is 4K. 
-org.vanilladb.core.storage.file.Page.BLOCK_SIZE=4096
+org.vanilladb.core.storage.file.Page.BLOCK_SIZE=8192
 # The parent directory of database files.
 org.vanilladb.core.storage.file.FileMgr.DB_FILES_DIR=
 # The directory of log files.
@@ -45,7 +45,7 @@ org.vanilladb.core.storage.buffer.BufferMgr.MAX_TIME=10000
 # The epsilon value for tuning waiting time.
 org.vanilladb.core.storage.buffer.BufferMgr.EPSILON=50
 # The size of buffer pool.
-org.vanilladb.core.storage.buffer.BufferMgr.BUFFER_POOL_SIZE=10240
+org.vanilladb.core.storage.buffer.BufferMgr.BUFFER_POOL_SIZE=102400
 
 
 #
@@ -115,13 +115,13 @@ org.vanilladb.core.storage.metadata.statistics.SampledHistogramBuilder.MAX_SAMPL
 # check if the index needs to be rehash.
 org.vanilladb.core.storage.index.hash.HashIndex.NUM_BUCKETS=100
 
-# IVFIndex
-org.vanilladb.core.storage.index.ivf.IVFIndex.CENTROID_COUNT=100
-org.vanilladb.core.storage.index.ivf.IVFIndex.MAX_CENTROID_COUNT=50
-org.vanilladb.core.storage.index.ivf.IVFIndex.MIN_CENTROID_COUNT=20
-org.vanilladb.core.storage.index.ivf.IVFIndex.MOVE_DIST_THRESHOLD=200
-org.vanilladb.core.storage.index.ivf.IVFIndex.MAX_ITERATIONS = 20
-org.vanilladb.core.storage.index.ivf.IVFIndex.REINDEX_THRESHOLD=10000
+# IVFFlatIndex
+org.vanilladb.core.storage.index.ivfflat.IVFFlatIndex.CENTROID_COUNT=100
+org.vanilladb.core.storage.index.ivfflat.IVFFlatIndex.MAX_CENTROID_COUNT=50
+org.vanilladb.core.storage.index.ivfflat.IVFFlatIndex.MIN_VECTOR_COUNT=20
+org.vanilladb.core.storage.index.ivfflat.IVFFlatIndex.MOVE_DIST_THRESHOLD=200
+org.vanilladb.core.storage.index.ivfflat.IVFFlatIndex.MAX_ITERATIONS = 20
+org.vanilladb.core.storage.index.ivfflat.IVFFlatIndex.REINDEX_THRESHOLD=10000
 
 #
 # SQL package settings
